modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/allowed-repos/rendered/test_samples/pods/001-example-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed
    namespace: testns
spec:
    containers:
        - image: my.repo/app:v1
          name: foo
