modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/allowed-repos/rendered/test_samples/pods/003-example-allowed-init-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-init-container
    namespace: testns
spec:
    containers:
        - image: my.repo/app:v1
          name: foo
    initContainers:
        - image: my.repo/init:v1
          name: init
