modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/allowed-repos/rendered/test_samples/pods/004-example-disallowed-ephemeral-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-ephemeral-container
    namespace: testns
spec:
    containers:
        - image: my.repo/app:v1
          name: foo
    ephemeralContainers:
        - image: docker.io/bad/app:v1
          name: eph
